# jules-sdk-python

./: .gitignore  Makefile  README.md  check_pr_status.py  git_log.txt  list_sessions.py  manual_submit.py  pyproject.toml  requirements.txt  update_pr.py
.fleet/: insight_38.md  insight_69.md
.fleet/goals/: code-snippets.md  docs.md  python-sdk.md
.github/workflows/: ci.yml  fleet-analyze.yml  fleet-dispatch.yml  fleet-label.yml  fleet-merge.yml  jules-merge-conflicts.yml
docs/: _gaps.md
docs/explanation/: architecture.md  sessions.md  sources.md
docs/how-to/: approve-a-plan.md  attach-sources.md  cookbook.md  handle-errors.md  poll-to-completion.md  retrieve-session-outputs.md
docs/reference/: client.md  errors.md  models.md  session-states.md
docs/tutorials/: first-session.md
examples/: archiving_workflow.py  automation_workflow.py  chat_interface.py  error_recovery.py  getting_started.py  inspect_activity.py  inspect_source.py  interactive_chat.py  list_and_filter.py  plan_inspection.py  plan_review.py  session_outputs.py  sources.py  watch_session.py
src/jules/: __init__.py  client.py  models.py
tests/: conftest.py  test_client.py  test_integration.py  test_models.py
