[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jules-sdk"
version = "0.1.0"
description = "A Python client for the Jules API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest",
    "respx",
]
