[project]
name = "jules-sdk"
version = "0.1.0"
description = "A Python client for the Jules API"
authors = [
    {name = "Jules Team", email = "jules-team@google.com"},
]
dependencies = [
    "httpx>=0.27",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest",
    "respx",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
